force-app/main/default/objects/Branch1__c/fields/Branch2__c.field-meta.xml
<CustomField>
    <fullName>Branch2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch2</label>
    <referenceTo>Branch2__c</referenceTo>
    <relationshipLabel>Branch1</relationshipLabel>
    <relationshipName>Branch1</relationshipName>
    <type>Lookup</type>
</CustomField>