force-app/main/default/objects/Branch1__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <defaultValue>&#39;Ad-11&#39;</defaultValue>
    <label>Branch Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>