force-app/main/default/objects/Branch1__c/fields/new123__c.field-meta.xml
<CustomField>
    <fullName>new123__c</fullName>
    <label>new123</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test123</valueSetName>
    </valueSet>
</CustomField>