force-app/main/default/objects/Branch1__c/fields/NewBranch2__c.field-meta.xml
<CustomField>
    <fullName>NewBranch2__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NewBranch2</label>
    <type>Text</type>
</CustomField>