force-app/main/default/objects/Branch1__c/fields/NewForm__c.field-meta.xml
<CustomField>
    <fullName>NewForm__c</fullName>
    <formula>Name +&#39;Text&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NewForm</label>
    <type>Text</type>
</CustomField>