force-app/main/default/objects/Branch1__c/recordTypes/HelpRecordType.recordType-meta.xml
<RecordType>
    <fullName>HelpRecordType</fullName>
    <active>true</active>
    <label>HelpRecordType</label>
</RecordType>