force-app/main/default/objects/Branch1__c/validationRules/new_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>new_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Branch2__c &lt;&gt;NULL</errorConditionFormula>
    <errorMessage>Hello</errorMessage>
</ValidationRule>